# waypoint_editor_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: rviz.rviz  test.launch  waypoint_editor.launch  waypoints.yaml
scripts/: edit_client.ui  edit_client_node.py  edit_client_ui.py  waypoint_editor_node.py
srv/: EditPoint.srv
